--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.mide.halloname"
     android:installLocation="auto"
-    android:versionCode="1"
-    android:versionName="1.0 (September 2018)">
+    android:versionCode="2"
+    android:versionName="1.1 (Februar 2019)">
 
     <application
         android:allowBackup="true"
