--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.mide.halloname"
     android:installLocation="auto"
-    android:versionCode="3"
-    android:versionName="1.2 (Mai2019)">
+    android:versionCode="4"
+    android:versionName="1.3 (September 2019)">
 
 
     <application
@@ -17,7 +17,7 @@
 
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action   android:name="android.intent.action.MAIN" />
+                <action   android:name="android.intent.action.MAIN"       />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
