--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.mide.halloname"
-    android:installLocation="auto"
-    android:versionCode="4"
-    android:versionName="1.3 (September 2019)">
-
-
+    android:installLocation="auto">
     
     <application
         android:allowBackup="true"
